modified index.html to include css reference

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Adam's Blog</title>
+
+		<link rel="stylesheet" href="./css/base.css">
+
 	</head>
 	<body>
 		Adam's Blog Page.
