--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta http-equiv="Refresh" content="0; url=http://adam-carr.me.uk/blog">
 		<title>Adam's Blog</title>
 
 		<link rel="stylesheet" href="./css/base.css">
 
 	</head>
 	<body>
-		Adam's Blog Page.
-		TODO: Add content!
-
-		More content plx.
 	</body>
 </html>
