--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="Refresh" content="0; url=http://adam-carr.me.uk/blog">
+		<meta http-equiv="Refresh" content="0; url=http://blog.adam-carr.me.uk">
 		<title>Adam's Blog</title>
 
 		<link rel="stylesheet" href="./css/base.css">
