--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="Refresh" content="0; url=http://blog.adam-carr.me.uk">
-		<title>Adam's Blog</title>
-
+		<title>Adam Carr</title>
 		<link rel="stylesheet" href="./css/base.css">
-
 	</head>
 	<body>
-		<div>Blog</div>
+		<div><a href='/blog'>Blog</a></div>
 	</body>
 </html>
