Fixed the link to the correct place.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		<link rel="stylesheet" href="./css/base.css">
 	</head>
 	<body>
-		<div><a href='/blog'>Blog</a></div>
+		<div><a href='http://blog.adam-carr.me.uk/'>Blog</a></div>
 	</body>
 </html>
